@@ -97,6 +97,7 @@ export("+.section",
        "nitrite<-",
        numberAsPOSIXct,
        oceApprox,
+       oceContour,
        oce.as.raw,
        oce.as.POSIXlt,
        oce.axis.POSIXct,
